# automata_42

./: .gitignore  .lintr  Cargo.toml  README.md  evolution.R
doc/: notes
src/: automata.R  bitgeom_lib.rs  canvas.rs  colours.R  colours.rs  evolution.R  experiments.R  graphics_window.rs  image.rs  lib.rs  main.rs  random.rs  universe.rs
src/evolution/: conways.rs  maze.rs  mod.rs  quantum.rs  rainbow.rs  random.rs
