[package]
name = "automata_42"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
minifb = "0.20.0"
regex = "1"
ringbuffer = "0.8.4"
chrono = "0.4"
hsl = "0.1"

[dev-dependencies]
rstest = "0.15.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
